# Python-Toon-Schema

./: LICENSE  README.md  pyproject.toml
docs/: api.md  format.md  index.md  performance.md  prompt_header.md  publish.md
examples/: demo.py
src/: compare.py  convert.py  decoder.py  detect.py  encoder.py  formats.py  tokens.py  toon_format.py
tests/: test_compare.py  test_decode.py  test_detect.py  test_encode.py  test_tokens.py
