[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p-toon"
version = "0.1.0"
description = "Token-oriented object notation (TOON) for compact, reversible JSON encoding"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Pharen IT GmbH" }]
keywords = ["toon", "json", "serialization", "llm", "tokens"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com"

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "toon_format",
  "encoder",
  "decoder",
  "detect",
  "tokens",
  "compare",
  "formats",
  "convert",
]
include-package-data = true
